tests/testfiles/valid_prog_fails/1_inline_test_in_decl.c
int main() {
    int x = 34 == 35 ? 2 : 3;

    return x;
}