tests/testfiles/invalid_prog_fails/10_comparison_el.c
int main(){
    int x=2;
    int y=1;
    if(x=<y){

    }
    return x;
}